feat: added components

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -466,16 +466,108 @@
     "delegation_empty_state_icon": "Delegation Empty State Icon",
     "use_desktop_to_verify": "Please use your desktop computer to verify on chain identity",
     "view_profile": "View Profile",
-  "logout": "Logout",
-  "set_on_chain_identity": "Set on-chain identity",
-  "remove_identity": "Remove Identity",
-  "townhall": "Townhall",
-  "staking": "Staking",
-  "free_balance": "Free Balance",
-  "transferable_balance": "Transferable Balance",
-  "set_defaults": "Set Defaults",
-  "delegated_voting_info": "You can adjust for delegated voting power from edit button on each proposal.",
-  "add_proposal_info_1": "1. Add proposal to cart by choosing your vote: aye, nay, or abstain.",
-  "add_proposal_info_2": "2. Click on the edit button on the proposal, and you will now be able to see and adjust delegated votes based on the proposal track.",
-  "know_more": "Know more"
+    "logout": "Logout",
+    "set_on_chain_identity": "Set on-chain identity",
+    "remove_identity": "Remove Identity",
+    "townhall": "Townhall",
+    "staking": "Staking",
+    "free_balance": "Free Balance",
+    "transferable_balance": "Transferable Balance",
+    "set_defaults": "Set Defaults",
+    "delegated_voting_info": "You can adjust for delegated voting power from edit button on each proposal.",
+    "add_proposal_info_1": "1. Add proposal to cart by choosing your vote: aye, nay, or abstain.",
+    "add_proposal_info_2": "2. Click on the edit button on the proposal, and you will now be able to see and adjust delegated votes based on the proposal track.",
+    "know_more": "Know more",
+    "please_install_any_wallet_to_access_polkasafe": "Please install any wallet to access Polkasafe",
+	"not_installed": "(not installed)",
+    "clear_expired_referenda_locks": "Clear expired referenda locks",
+	"unlock_your_tokens": "Unlock Your Tokens",
+	"next_unlock_in": "Next Unlock in",
+	"no_unlocks_available": "No Unlocks Available",
+	"change": "Change",
+	"unlock_tokens": "Unlock Tokens",
+    "total_unlockable_balance": "Total Unlockable Balance",
+	"locked_balance": "Locked Balance",
+	"ongoing": "Ongoing",
+	"hide_all_unlocks": "Hide All Unlocks",
+	"view_all_unlocks": "View All Unlocks",
+    "unlock_success_box_icon": "unlock success box icon",
+	"tokens_unlocked_successfully": "Tokens unlocked successfully",
+    "hourglass": "hourglass",
+	"unlocked_on": "Unlocked on",
+	"achievement_unlocked": "Achievement Unlocked",
+	"locked": "Locked",
+	"you_earned": "You Earned",
+	"badge": "Badge",
+    "cover_photo": "Cover Photo",
+	"cover_photo_description": "Choose from below or upload a file with 1600px dimension or above",
+	"cover_image_required": "Cover image is required.",
+	"profile_image_required": "Profile image is required.",
+	"profile_image": "Profile Image",
+	"profile_image_description": "Upload a file with 1600px dimension or above",
+	"display_name": "Display Name",
+	"display_name_placeholder": "eg. John",
+	"job_title": "Job Title",
+	"job_title_placeholder": "eg. Manager",
+	"about": "About",
+	"about_placeholder": "eg. I am a Web Developer",
+	"tags_description": "Tags indicate individual successes, abilities, skills and/or interests",
+	"tags_placeholder": "eg. Council Member, Voter, etc.",
+    "edit_profile": "Edit Profile",
+	"image_url_invalid": "Image URL is invalid.",
+	"url_invalid": "URL is invalid.",
+	"please_fill_required_fields": "Please fill in the required fields.",
+	"profile_not_updated": "Your profile is not updated.",
+	"profile_updated": "Your profile is updated.",
+	"save": "Save",
+	"basic_information": "Basic Information",
+	"socials": "Socials",
+    "redirect_icon": "Redirect icon",
+	"view_comment": "View Comment",
+	"view_reply": "View Reply",
+    "medal": "Medal",
+	"badges": "Badges",
+	"unlock_engage": "Unlock, receive, and earn badges as you engage on Polkassembly",
+	"address_copied": "Address copied to clipboard",
+	"decentralized_voices": "Decentralized Voices",
+	"user_since": "User Since",
+	"calendar": "Calendar",
+    "tip_user": "Tip User",
+	"delegate": "Delegate",
+	"delegate_logo": "Delegate Logo",
+	"link_proxy_address": "Link Proxy Address",
+	"linked_addresses": "Linked Addresses",
+    "mentions": "Mentions",
+	"mentioned": "mentioned",
+	"you": "you",
+	"no_mentions_found": "No mentions found",
+    "click_to_add_bio": "Click here to add bio",
+    "posts": "Posts",
+    "no_posts_found": "No Posts found",
+    "reactions": "Reactions",
+    "reacted": "reacted",
+    "on": "on",
+    "your": "your",
+    "s_possessive": "'s",
+    "no_reactions_found": "No reactions found",
+    "empty_icon": "Empty Icon",
+    "proposal_created": "Proposal Created",
+    "discussion_created": "Discussion Created",
+    "my_activity": "My Activity",
+    "activity": "Activity",
+    "proposals_voted": "Proposals Voted",
+    "tipping": "Tipping",
+    "given": "Given",
+    "received": "Received",
+    "custom": "Custom",
+    "no_tip_found": "No tip found",
+    "added_comment": "added a comment on",
+    "added_reply": "added a reply on",
+    "no_activity": "No current activities",
+    "replies": "Replies",
+    "reacts": "Reacts",
+    "gov1": "Gov1",
+    "transferrable": "Transferrable",
+    "balance": "Balance",
+    "upload_cover": "Upload cover"
 }
