feat: hardcoded strings to json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -569,5 +569,45 @@
     "gov1": "Gov1",
     "transferrable": "Transferrable",
     "balance": "Balance",
-    "upload_cover": "Upload cover"
+    "upload_cover": "Upload cover",
+    "delegation_detail": "Delegation Detail",
+    "delegated_votes": "Delegated Votes",
+    "delegation_list": "Delegation List",
+    "show_all": "Show All",
+    "address": "Address",
+    "count": "Count",
+    "delegatee": "Delegatee",
+    "target": "Target",
+    "delegate_icon": "Delegate icon",
+    "not_enough_data": "Not enough data available",
+    "delegation_split": "Delegation Split",
+    "delegated": "Delegated",
+    "solo": "Solo",
+    "voters": "voters",
+    "referenda": "Referenda",
+    "average_turnout_percentage": "Average Turnout Percentage",
+    "percentage": "Percentage",
+    "vote_split": "Vote Split",
+    "abstain": "Abstain",
+    "voting_trends": "Voting Trends",
+    "conviction_votes": "Conviction Votes",
+    "vote_amount": "Vote Amount",
+    "accounts": "Accounts",
+    "voting_trends_icon": "Voting Trends icon",
+    "proposal_created_icon": "Proposal created icon",
+    "active_proposals_icon": "Active Proposals icon",
+    "arrow_up_icon": "Arrow up icon",
+    "this_week": "this week",
+    "tracker": "Tracker",
+    "tracker_description": "This is a place to keep track of on-chain posts.",
+    "tip_proposals": "Tip Proposals",
+    "give_a_tip": "Give a Tip",
+	"go_back": "Go Back",
+	"insufficient_balance": "Insufficient Balance for Tipping",
+	"receiver_address": "Receiver Address",
+	"existential_deposit": "Existential Deposit",
+	"enter_custom_amount": "Or enter the custom amount you would like to Tip",
+	"select_tip": "Please select a tip you would like to give to",
+    "Free Balance": "Free Balance",
+    "Transferable Balance": "Transferable Balance"
 }
