fix: src hardcoded string to json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -609,5 +609,115 @@
 	"enter_custom_amount": "Or enter the custom amount you would like to Tip",
 	"select_tip": "Please select a tip you would like to give to",
     "Free Balance": "Free Balance",
-    "Transferable Balance": "Transferable Balance"
+    "Transferable Balance": "Transferable Balance",
+    "set_conviction": "Set Conviction",
+    "locking_period": "Locking Period",
+    "read_full_proposal": "Read Full Proposal",
+    "all_votes_made_with": "All Votes will be made with",
+    "summary": "Summary",
+    "no_active_proposals_in_cart": "Currently no active proposals found in cart",
+    "total_proposals": "Total Proposals",
+    "gas_fees": "Gas Fees",
+    "confirm_batch_voting": "Confirm Batch Voting",
+    "no_active_proposals_found": "Currently no active proposals found",
+    "not_available": "N/A",
+	"curator": "Curator",
+	"claimed": "Claimed",
+	"date": "Date",
+	"categories": "Categories",
+	"expand_to_view_child_bounties": "Expand to view Child Bounties",
+	"last_child_level": "Last child level",
+	"child_level": "Child level",
+	"no_child_bounties_available": "No child bounties available.",
+    "create_event": "Create Event",
+    "event_title": "Event Title",
+    "event_type": "Event Type",
+    "online": "Online",
+    "offline": "Offline",
+    "start_date": "Start Date",
+    "end_date": "End Date",
+    "joining_link": "Joining Link",
+    "location": "Location",
+    "select_proposer_address": "Select Proposer Address",
+	"creating_bounty_proposal": "Creating a Bounty Proposal",
+	"install_wallet_create_address": "Please install a wallet and create an address to start creating a proposal.",
+	"exit_proposal_creation": "Exit Proposal Creation",
+	"exit_confirmation_message": "Your proposal information (Title, Description & Tags) would be lost. Are you sure you want to exit the proposal creation process?",
+	"create_bounty_proposal": "Create Bounty Proposal",
+	"write_proposal": "Write a Proposal",
+	"create_bounty": "Create Bounty",
+	"discuss_contribute_updates": "Discuss, contribute, and get regular updates from Polkassembly.",
+    "fetching_bounty": "Fetching Bounty",
+    "error_fetching_bounty_proposer_data": "Error in fetching bounty proposer data",
+    "invalid_details_error": "Error in fetching bounty proposer data. Please input valid details.",
+    "minimum_balance_for_transactions": "Please maintain minimum {{bountyBond}} {{unit}} balance for these transactions",
+    "available_balance_too_low": "Available balance too low",
+    "creating_transaction": "Creating Transaction",
+    "failed_fetching_bounty_count": "Failed to fetch bounty count",
+    "transaction_failed_console": ":( transaction failed",
+    "error_creating_bounty": "Error while creating bounty",
+    "error_creating_post": "There was an error creating your post.",
+    "thanks_for_sharing": "Thanks for sharing!",
+    "bounty_created_successfully": "Bounty created successfully.",
+    "no": "No",
+    "already_created_bounty": "Have you created a bounty already?",
+    "bounty_id": "Bounty Id",
+    "enter_bounty_amount": "Enter Bounty Amount",
+    "bounty_amount": "Bounty Amount",
+    "bounty_bond": "Bounty Bond",
+    "fetching_data_from_polkadotjs": "Fetching data from polkadot.js",
+    "existing_preimage_question": "Do you have an existing preimage?",
+    "required_field": "Please add the '${name}'",
+    "preimage_hash_label": "Preimage Hash",
+    "preimage_hash_tooltip": "A unique hash is generated for your preimage, used to populate proposal details.",
+    "enter_preimage_hash": "Enter Preimage Hash",
+    "preimage_length_label": "Preimage Length",
+    "enter_preimage_length": "Enter Preimage Length",
+    "select_track_label": "Select Track",
+    "select_track_tooltip": "Track selection is done based on the amount requested.",
+    "enactment_label": "Enactment",
+    "enactment_tooltip": "A custom delay can be set for enactment of approved proposals.",
+    "at_block_no": "At Block No",
+    "after_no_of_blocks": "After No. of Blocks",
+    "gas_fee_message": "Gas Fees of {{gasFee}} {{unit}} will be applied to create the preimage.",
+    "gas_fee": "Gas Fee",
+    "create_bounty_proposal_description": "Initiate a proposal for a new bounty.",
+    "available_bounty_pool": "Available Bounty Pool",
+    "active_bounties": "Active Bounties",
+    "claimants": "Claimants",
+    "total_rewarded": "Total Rewarded",
+    "total_bounty_pool": "Total Bounty Pool",
+    "people_earned": "No. of People Earned",
+    "bounty_icon_alt": "bounty icon",
+    "arrow_icon_alt": "arrow icon",
+    "dashed_line_alt": "dashed line",
+    "create_icon_alt": "create icon",
+    "barcode_icon_alt": "barcode icon",
+    "horizontal_dashed_line_alt": "horizontal dashed line",
+    "create_mb_icon_alt": "create mobile icon",
+    "barcode_mb_icon_alt": "barcode mobile icon",
+    "vote": "Vote",
+    "redirect_link": "redirect link",
+    "bounty_icon": "bounty icon",
+    "user_img": "user image",
+    "bounty": "bounty",
+    "date_format": "DD[th] MMM 'YY",
+    "redirect": "redirect link",
+    "user_image": "user image",
+    "child_bounty_icon": "child bounty icon",
+    "child_bounties": "Child Bounties",
+    "arrow": "arrow",
+    "dashboard": "Dashboard",
+    "hot_bounties": "Hot Bounties",
+    "hot_bounties_icon": "hot bounties icon",
+    "view_all": "View All",
+    "carousel_icon": "carousel icon",
+    "bounty_proposals": "Bounty Proposals",
+    "bounty_proposals_icon": "bounty proposals icon",
+    "coming_soon": "coming soon",
+    "referendum_count_by_category": "Referendum count by Category",
+    "voting": "Voting",
+    "no_data_available": "Not enough data available"
 }
+    
+
