--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -717,7 +717,51 @@
     "coming_soon": "coming soon",
     "referendum_count_by_category": "Referendum count by Category",
     "voting": "Voting",
-    "no_data_available": "Not enough data available"
+    "no_data_available": "Not enough data available",
+    "all_tracks": "All Tracks",
+    "timeout": "Timeout",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "cancelled": "Cancelled",
+    "referendum_count_by_status": "Referendum Count by Status",
+    "approved_proposal_icon": "Approved Proposal Icon",
+    "monitored_tracks_icon": "Monitored Tracks Icon",
+    "approved_proposals": "Approved Proposals",
+    "monitored_tracks": "Monitored Tracks",
+    "not_enough_data_available": "Not enough data available",
+    "track_delegation": "Track Delegation",
+    "approved_proposals_icon": "Approved Proposals Icon",
+    "monthly_spend": "Monthly DOT Spent",
+    "no_graph_available": "No Graph Available",
+    "referendum_count": "Referendum Count",
+    "identity_remove": "Remove Identity",
+    "select_address": "Select Address",
+    "wallet_alert_title": "Remove Identity",
+    "account_alert_title": "Please install a wallet and create an address to start removing identity.",
+    "no_identity_error": "No Onchain Identity found for this address",
+    "bond_fee_warning": "Removing Identity would unlock bond amount of {{bond}}",
+    "gas_fee_info": "Gas Fees of {{gas}} will be applied to remove identity for this address.",
+    "edit_profile_prompt": "This page belongs to address ({address}). Only this user can edit this description and the title. If you own this address, edit this page and tell us more about yourself.",
+    "no_web3_integration": "No web 3 account integration could be found. To be able to vote on-chain, visit this page on a computer with the polkadot-js extension.",
+    "no_accounts_found": "You need at least one account in Polkadot-js extension to log in.",
+    "address_not_available": "Address not available.",
+    "initializing_connection": "Initializing Connection...",
+    "profile_update": "Update Profile",
+    "creating": "Creating",
+    "update": "Update",
+    "account": "Account",
+    "legal": "Legal",
+    "riot": "Riot",
+    "web": "Web",
+    "twitter": "Twitter",
+    "no_address_attached": "No address attached to this account",
+    "voting_history": "Voting History",
+    "notificationSettings": "Notification Settings",
+    "updateNotificationSettings": "Update your notification settings. You will be receiving your notifications on",
+    "subscribeToPostParticipated": "Subscribe to post you participate in",
+    "subscribeToPostCreated": "Subscribe to post you created",
+    "notifiedForNewProposal": "Notified for new proposal in council/motion/referendum",
+    "notifiedForOwnProposal": "Notified for your own proposals"
 }
     
 
