fix: components added

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -761,7 +761,145 @@
     "subscribeToPostParticipated": "Subscribe to post you participate in",
     "subscribeToPostCreated": "Subscribe to post you created",
     "notifiedForNewProposal": "Notified for new proposal in council/motion/referendum",
-    "notifiedForOwnProposal": "Notified for your own proposals"
+    "notifiedForOwnProposal": "Notified for your own proposals",
+    "challenge_message_not_found": "Challenge message not found.",
+    "web3_login_failed": "Web3 Login failed.",
+    "fetching_addresses_message": "For fetching your addresses, Polkassembly needs access to your wallet extensions. Please authorize this transaction.",
+    "already_have_account": "Already have an account?",
+    "got_it": "Got it!",
+    "need_at_least_one_account": "You need at least one account in Polkadot-js extension to login.",
+    "reload_after_adding_accounts": "Please reload this page after adding accounts.",
+    "requesting_web3_accounts": "Requesting Web3 accounts...",
+    "sign_up_walletconnect": "Sign-up with WalletConnect",
+    "need_at_least_one_account_walletconnect": "You need at least one account via WalletConnect to login.",
+    "please_reload_after_adding_accounts": "Please reload this page after adding accounts.",
+    "requesting_accounts": "Requesting accounts...",
+    "choose_linked_account": "Choose linked account",
+    "please_login_network": "Please login using the {{network}} network",
+    "walletconnect_signup_failed": "WalletConnect signup failed.",
+    "add_email_settings": "Add an email in settings if you want to be able to recover your account!",
+    "add_optional_email": "Add optional email",
+    "username_exist_check_error": "Error while checking if username exists.",
+    "username_already_exists": "Username already exists. Please choose a different username.",
+    "create_username": "Create Username",
+    "re_enter_password": "Re-enter Password",
+    "password_placeholder": "Password",
+    "username_placeholder": "John",
+    "enter_email": "Enter Email",
+    "email_placeholder": "email@example.com",
+    "agree_terms": "I have read and agree to the terms of the",
+    "agree_terms_error": "Please agree to the terms of the Polkassembly end user agreement.",
+    "personal_data_usage": "To see how we use your personal data please see our",
+    "privacy_notice": "privacy notice",
+    "sign_up_username": "Sign-up with username",
+    "sign_up_polkadotjs": "Sign-up with polkadot.js",
+    "youve_got_some_mail": "You've got some mail",
+    "verify_email_instruction": "We sent you an email to verify your address. Click on the link in the email.",
+    "wallet_extension_not_detected": "Wallet extension not detected.",
+    "no_web3_integration_found": "No web3 account integration could be found. To be able to use this feature, visit this page on a computer with the Polkadot-js extension.",
+    "signup_by_polkasafe": "Signup by Polkasafe",
+    "fetch_multisig_details": "To fetch your Multisig details, please select a wallet extension",
+    "fetch_addresses_message": "For fetching your addresses, Polkassembly needs access to your wallet extensions. Please authorize this transaction.",
+    "log_in": "Log In",
+    "wallet_timeout": "Wallet Timeout",
+    "pending_authorisation": "Pending authorisation request already exists for this site. Please accept or reject the request.",
+    "pending_authorisation_message": "Pending authorisation request already exists. Please accept or reject the request on the wallet extension and try again.",
+    "wallet_authorisation_timed_out": "Wallet authorisation timed out. Please accept or reject the request on the wallet extension and try again.",
+    "password_do_not_match": "Password don't match",
+    "super_search": "Super Search",
+    "results_for": "Results for",
+    "type_here_to_search": "Type here to search for something",
+    "in_posts": "in Posts",
+    "in_people": "in People",
+    "no_title": "No title",
+    "today": "Today",
+    "last_7_days": "Last 7 days",
+    "last_30_days": "Last 30 days",
+    "last_3_months": "Last 3 months",
+    "all_time": "All time",
+    "opengov": "OpenGov",
+    "topic": "Topic",
+    "clear_all_filters": "Clear All Filters",
+    "powered_by": "powered by",
+    "looking_for_results_across_polkassembly_universe": "Looking for results across the Polkassembly Universe.",
+    "looking_for_results": "Looking for results.",
+    "welcome_to_supercharged_search": "Welcome to the all new & supercharged search!",
+    "posts_autocomplete_fetch_error": "Posts autocomplete fetch error:",
+    "users_autocomplete_fetch_error": "Users autocomplete fetch error:",
+    "signup_activity": "signup_activity",
+    "new_user_registration": "new_user_registration",
+    "people": "People",
+    "search_icon": "Search Icon",
+    "logo": "Logo",
+    "opengov_referenda": "Opengov referenda",
+    "no_search_results": "No search results found. You may want to try using different keywords.",
+    "enter_at_least_three_chars": "Please enter at least 3 characters to proceed.",
+    "use_super_search": "Use Super Search",
+    "see": "See",
+    "latest_activity": "Latest Activity",
+    "on_polkassembly": "on Polkassembly.",
+    "didnt_find": "Didn’t find what you were looking for?",
+    "no_account": "Don't have an account?",
+    "singup_agreement": "By Signing up you agree to the terms of the",
+    "two_factor_authentication": "Two Factor Authentication",
+	"two_factor_auth_instruction": "Please open the two-step verification app or extension and input the authentication code for your Polkassembly account.",
+	"authentication_code": "Authentication Code",
+	"valid_auth_code_message": "Please provide a valid authentication code.",
+    "login_to_polkassembly": "Login to Polkassembly",
+	"select_wallet": "Select a wallet",
+	"login_with_username_email": "Login with Username/Email",
+	"enter_username_or_email": "Enter Username or Email",
+	"enter_password": "Enter Password",
+	"type_here": "Type here",
+	"forgot_password": "Forgot Password?",
+	"dont_have_an_account": "Don't have an account?",
+	"fetch_addresses": "For fetching your addresses, Polkassembly needs access to your wallet extensions. Please authorize this transaction.",
+	"dont_have_account": "Don't have an account?",
+	"need_one_account": "You need at least one account in Polkadot-js extension to login.",
+	"reload_after_adding": "Please reload this page after adding accounts.",
+	"sign_up_agreement": "By Signing up you agree to the terms of the",
+	"user_agreement": "Polkassembly end user agreement",
+    "chain_logo": "Chain Logo",
+	"total_supply_locked": "of Total Supply Locked",
+	"in_parachains_and_crowdloans": "in Parachains and Crowdloans",
+	"auction": "Auction",
+	"crowdloans": "Crowdloans",
+	"crowdloans_icon": "Crowdloans Icon",
+	"parachains_icon": "Parachains Icon",
+	"projects_icon": "Projects Icon",
+	"tokens": "Tokens",
+	"w3f_grant": "W3F Grant",
+	"na": "N/A",
+	"project": "Project",
+	"auction_icon": "Auction Icon",
+	"testing_icon": "Testing Icon",
+	"announced_icon": "Announced Icon",
+	"live_icon": "Live Icon",
+	"token": "Token",
+	"w3f": "W3F",
+	"w3f_logo": "W3F Logo",
+	"w3f_grant_terminated": "W3F grant TERMINATED: \"{{reason}}\"",
+	"w3f_grant_received_milestone": "{{received}} W3F grant(s) received, {{milestone}}",
+	"w3f_grant_received_completed": "{{received}} received, {{completed}} completed",
+	"in_auction": "In Auction",
+	"testing": "Testing",
+	"announced": "Announced",
+	"live": "Live",
+	"investors": "Investors",
+	"github": "Github",
+	"github_logo": "Github Logo",
+    "actions": "Actions",
+    "astrals": "Astrals",
+    "user": "User",
+    "score_system": "A score system based on the aggregate of off-chain, on-chain activity and profile activity.",
+    "earn_points": "The more points you earn, the higher your rank in the leaderboard!",
+    "learn_more": "Learn more",
+    "top_50_ranks": "Top 50 Ranks",
+    "rank_0": "Rank 0",
+    "id": "ID",
+	"posted_by": "Posted By",
+	"created": "Created",
+	"origin": "Origin"
 }
     
 
