feat: strings to json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -899,7 +899,66 @@
     "id": "ID",
 	"posted_by": "Posted By",
 	"created": "Created",
-	"origin": "Origin"
+	"origin": "Origin",
+    "error_fetching_discussions": "Error fetching discussions",
+    "no_referenda_found": "No Referenda found.",
+    "tips": "Tips",
+    "not_tipped": "Not Tipped",
+    "tipped": "Tipped",
+    "opened": "Opened",
+    "rewarded": "Rewarded",
+    "talisman_proposal_title": "Talisman Proposal: Cross-Chain Transaction",
+    "talisman_proposal_description": "Working on finishing up the tickets for the bigger project files. Working on finishing up the tickets for",
+    "time_ago": "{{time}} ago",
+    "delegation_on_polkassembly": "Delegation on Polkassembly",
+    "how_to_delegate": "How to Delegate on Polkassembly",
+    "step": "STEP",
+    "select_track": "Select Track for Delegation",
+    "select_track_description": "OpenGov allows for track level agile delegation. Choose a track to proceed.",
+    "double_arrow_icon": "Double side arrow icon",
+    "select_delegate": "Select Delegate",
+    "select_delegate_description": "Choose a delegate based on the stats to complete your delegation process.",
+    "learn_more_about_delegation": "Want to learn more about the delegation process before locking your tokens? Click",
+    "click_here": "here",
+    "total_delegatees": "Total Delegatees",
+    "total_delegatees_icon": "Total delegatees icon",
+    "total_supply": "Total Supply",
+    "total_supply_icon": "Total supply icon",
+    "total_delegates": "Total Delegates",
+    "total_delegates_icon": "Total delegates icon",
+    "total_delegated_votes": "Total Delegated Votes",
+    "total_delegated_votes_icon": "Total delegated votes icon",
+    "delegated_tokens": "Delegated Tokens",
+    "delegated_tokens_icon": "Delegated tokens icon",
+    "not_voted_yet": "Not Voted yet",
+    "no_active_proposals": "No Active Proposals",
+    "login_to_continue": "Please Login to continue",
+    "become_delegate": "Become a Delegate",
+    "step_1": "STEP 1",
+    "track_level_delegation": "OpenGov allows for track level agile delegation. Choose a track to proceed.",
+    "step_2": "STEP 2",
+    "choose_delegate": "Choose a delegate based on the stats to complete your delegation process.",
+    "learn_more_before_locking": "Want to learn more about delegation process before locking your tokens? Click",
+    "here": "here",
+    "Delegated": "Delegated",
+    "Undelegated": "Undelegated",
+    "Polkadot Delegate": "Polkadot Delegate",
+    "Polkassembly Delegate": "Polkassembly Delegate",
+    "Individual": "Individual",
+    "Read more": "Read more",
+    "Read less": "Read less",
+    "No Bio": "No Bio",
+    "Voting power": "Voting power",
+    "Recv'd Delegation": "Received Delegation",
+    "Voted proposals": "Voted proposals",
+    "Past 30 days": "Past 30 days",
+    "Delegate": "Delegate",
+    "Received Delegation": "Received Delegation",
+    "Edit": "Edit",
+    "Become a Delegate": "Become a Delegate",
+    "Voting power description": "This represents the total balance delegated to this profile.",
+    "Voted proposals description": "Number of proposals voted on in the past 30 days.",
+    "Received Delegation description": "Total number of delegations received."
 }
     
 
