fix:string to json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -977,7 +977,41 @@
     "clear_all": "Clear All",
     "received_delegations": "Received Delegation(s)",
     "no_results_found": "No results found",
-    "delegate_to_address": "Delegate to this address"
+    "delegate_to_address": "Delegate to this address",
+    "waiting_for_signature": "Waiting for signature",
+    "proposal_successful": "Proposal #{{id}} successful.",
+    "broadcasting_vote": "Broadcasting the vote",
+    "maintain_minimum_balance": "Please maintain minimum {{balance}} {{unit}} balance for these transactions:",
+    "referenda_index": "Referenda Index",
+    "enter_referendum_to_cancel": "Enter referendum number you want to cancel",
+    "enter_referendum_to_kill": "Enter referendum number you want to kill",
+    "enter_positive_number": "Please enter a positive number",
+    "enter_referenda_index": "Enter Referenda Index",
+    "content": "Content",
+    "fetching_proposal_details": "Fetching proposal details",
+    "proposal_info": "Your proposal information (Title, Description & Tags) would be lost. Are you sure you want to exit proposal creation process?",
+    "creating_referendum": "Creating a Referendum",
+    "cancelling_referendum": "Cancelling a Referendum",
+    "killing_referendum": "Killing a Referendum",
+    "treasury_proposal_creation": "Treasury Proposal Creation",
+    "install_wallet_to_create_proposal": "Please install a wallet and create an address to start creating a proposal.",
+    "proposal_info_lost_confirmation": "Your proposal information (Title, Description & Tags) would be lost. Are you sure you want to exit proposal creation process?",
+    "create_referenda": "Create Referenda",
+    "cancel_referenda": "Cancel Referenda",
+    "kill_referenda": "Kill Referenda",
+    "create_treasury_proposal": "Create Treasury Proposal",
+    "cancel_proposal": "Cancel a Referenda",
+    "kill_proposal": "Kill a Referenda",
+    "join_to_create_proposal": "Join Polkassembly to Create a New proposal.",
+    "relative_time": "{{time}} ago",
+    "share_message": "Check out this forum discussion{{username, select, undefined {} other { by {{username}}}}}",
+	"share_link": "On {{link}}",
+    "replies_count": "{{count}} replies",
+	"hide_replies": "Hide replies",
+	"user_image_alt": "user image",
+    "relative_time_string": "{{time}}",
+    "back_to_forum": "Back to Forum",
+	"redirection_icon": "Redirection Icon"
 }
     
 
