fix: hardcoded string to json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1011,7 +1011,109 @@
 	"user_image_alt": "user image",
     "relative_time_string": "{{time}}",
     "back_to_forum": "Back to Forum",
-	"redirection_icon": "Redirection Icon"
+	"redirection_icon": "Redirection Icon",
+    "teleport_prompt": "You have to teleport {{amount}} {{unit}} to People chain to continue.",
+	"teleport_button": "Teleport",
+	"teleport_modal_title": "Teleport funds to People Chain",
+	"address_tooltip": "Please note the verification cannot be transferred to another address.",
+	"beneficiary_address": "Beneficiary Address",
+	"beneficiary_placeholder": "Enter Beneficiary Address",
+	"teleport_wallet_title": "Teleport People Chain",
+	"notification_failed_header": "Failed!",
+	"transaction_success": "Success!",
+	"w3f_grant_milestone": "{{received}} received, {{milestone}}",
+	"w3f_grant_completed": "{{received}} received, {{completed}} completed",
+    "error_saving_rating": "Error in saving your rating.",
+    "success_rating_added": "Your rating is now added",
+    "average_rating": "Average Rating",
+    "pdf_progress_report": "Progress Report - {{postType}} - {{postIndex}}",
+    "rate_delivery": "Rate Delivery",
+    "summary_of_progress_report": "Summary of Progress Report",
+    "view_progress_report_detail": "View Progress Report in detail",
+    "users_already_rated": "{{count}} users have already rated the progress report.",
+    "ratings_tooltips": ["Vaporware", "FUD", "Neutral", "WAGMI", "LFG"],
+    "rated_successfully": "Rated successfully",
+    "users_rated_average": "{{count}} user(s) rated and the Average Delivery rating is {{averageRating}}/5",
+    "progress_report_pending": "Progress Report Pending!",
+    "edit_summary": "Edit Summary",
+    "add_summary": "Add Summary",
+    "update_progress_report": "Please update your progress report for users to rate it.",
+    "upload_success": "{{name}} file uploaded successfully.",
+    "upload_fail": "{{name}} file upload failed.",
+    "upload": "Upload",
+    "uploading": "Uploading...",
+    "drag_drop_files": "Drag and drop your files here.",
+    "view_template": "View Template for making a Progress Report",
+    "replace": "Replace",
+    "remove_file_success": "Last uploaded file removed successfully",
+    "remove_file_fail": "Failed to remove last uploaded file",
+    "unexpected_error": "An unexpected error occurred",
+    "remove_file_prompt": "Cannot upload a new file until the previous one is removed.",
+    "progress_report_added": "Progress Report Successfully Added",
+    "view_on_proposal_page": "View on Proposal Page",
+    "new_progress_report": "A new Progress Report was added for this referenda.",
+    "progress_report_summary": "Progress Report Summary",
+    "upload_progress_report": "Upload Progress Report",
+    "error_saving_post": "Error in saving your post.",
+    "post_edited_successfully": "Your post is now edited",
+    "request_judgement": "Request Judgement",
+    "identity_registration_initiated": "On-chain identity registration initiated",
+    "matrix": "Matrix",
+    "start_verification_process": "Let’s start your verification process",
+    "transaction_fee_required": "{{amount}} {{unit}} will be required for this transaction.",
+    "show_details": "Show Details",
+    "hide_details": "Hide Details",
+    "min_deposit_refundable": "Min. Deposit (Refundable)",
+    "deposit_tooltip": "Deposit is refundable and can be redeemed once verification is removed",
+    "registrar_fee": "Registrar fees",
+    "registrar_fee_tooltip": "Fee charged for on-chain verification by registrar.",
+    "total": "Total",
+    "verified": "Verified",
+    "verify": "Verify",
+    "email_verification_in_progress": "Email verification in progress",
+    "check_inbox_or_spam": "Check primary inbox or spam",
+    "verification_link_sent": "A verification link has been sent to your mail address",
+    "contact_us": "Regarding any query Contact us",
+    "verified_successfully": "Verified successfully",
+    "verified_successfully_social": "{{social}} verified successfully",
+    "continue_verification": "Continue verification",
+    "total_amount_required": "Total Amount Required",
+    "min_deposit": "Min Deposit",
+    "min_deposit_tooltip": "Amount that needs held in an address for a verified account.",
+    "registrar_fees": "Registrar fees",
+    "registrar_fees_tooltip": "Fee charged for on chain verification by registrar.",
+    "lets_begin": "Let's Begin",
+    "request_judgement_tooltip": "If you have already set your identity, you can request a judgment directly from here",
+    "no_identity_request_found": "No identity request found for judgment.",
+    "email_verification_required": "To request judgement from Polkassembly please provide email for verification before requesting judgement.",
+    "polkadot_on_chain_identities_info": "Polkadot offers on-chain identities that verify user's credentials through appointed registrars, instilling greater trust and support.",
+    "polkadot_verification_benefits": "Once successfully verified, users receive a green checkmark, symbolizing their trusted status. This verified status symbol enhances trustworthiness when requesting funds from the treasury or participating in discussions and proposals.",
+    "view_amount_breakup": "View Amount Breakup",
+    "hide_amount_breakup": "Hide Amount Breakup",
+    "exit_verification": "Exit Verification",
+    "pending_verification_exit": "Your verification is pending. Are you sure you want to exit the verification process?",
+    "no_continue_verification": "No, continue verification",
+    "social_verification": "Socials Verification",
+    "verification_successful": "On-chain identity verified successfully",
+    "verify_email_description": "Check your primary inbox or spam to verify your email address.",
+    "verify_twitter_description": "Please login to Twitter to verify your email address.",
+    "copy_updated_username": "Copy updated username",
+    "matrix_verification_instructions": "To verify your Matrix ID, please set your Element display name to {username}. Make sure to follow this format for successful verification.",
+    "matrix_verification_error": "The Matrix display name does not match the updated one. Please ensure your display name is correctly set for verification.",
+    "matrix_verification_success": "Matrix account successfully verified",
+    "proceed": "Proceed",
+	"success_icon_alt": "success delegate icon",
+	"proposal_created_success": "Proposal created successfully for",
+	"funding_amount": "Funding Amount",
+	"wallet_creation_prompt": "Please install a wallet and create an address to start creating a proposal.",
+	"join_polkassembly_subtitle": "Discuss, contribute and get regular updates from Polkassembly.",
+    "initiate_discussion": "Have you initiated a discussion post for your proposal already?",
+	"notification_failed": "Failed!",
+	"notification_fetch_failed": "Unable to fetch data for this discussion number.",
+	"invalid_discussion_link": "Please add a valid discussion link for {{network}} Network",
+	"discussion_info": "Discussion posts allow the community to deliberate and recommend improvements. A Discussion should be created before creating a proposal.",
+	"create_discussion": "Create Discussion Post",
+	"title_length_exceeded": "Title should not exceed 150 characters."
 }
     
 
